# claude-context-local

./: .gitignore  CHANGELOG.md  CODEX.md  README.md  common_utils.py  pyproject.toml
chunking/: available_languages.py  base_chunker.py  multi_language_chunker.py  text_chunker.py
chunking/languages/: __init__.py  astro_chunker.py  css_chunker.py  graphql_chunker.py  html_chunker.py  json_chunker.py  toml_chunker.py  xml_chunker.py  yaml_chunker.py
embeddings/: embedder.py  embedding_model.py  embedding_models_register.py  gemma.py  sentence_transformer.py
mcp_server/: __init__.py  code_search_mcp.py  code_search_server.py  code_search_server.py.bak  mcp_tools.py  server.py  strings.yaml  strings_loader.py
merkle/: snapshot_manager.py
projects/8abdcb7996c759ed1df5719079934b1a/: 8abdcb7996c759ed1df5719079934b1a_metadata.json  8abdcb7996c759ed1df5719079934b1a_snapshot.json
projects/ADS_Website_6adc23d1/: project_info.json
projects/AP Book Page_5dff5395/: project_info.json
projects/ASC Knowledge Transformation_04edc9df/: project_info.json
projects/CS-RAG_2fc25ac0/: project_info.json
projects/CareMinutes_746826c7/: project_info.json
projects/No10Briefing_a9a2527a/: project_info.json
projects/The British Omani Society_files_9fc8f411/: project_info.json
projects/UniversalCouncilAPP_ac2b1e57/: project_info.json
projects/UniversalTrasncriptionAPP (DEMO)_28045edc/: project_info.json
projects/a20d5cc95c847602e978049f9af82a69/: a20d5cc95c847602e978049f9af82a69_metadata.json  a20d5cc95c847602e978049f9af82a69_snapshot.json
projects/backend_1f5c9f39/: project_info.json
projects/claude-context-local_f3c1fc90/: project_info.json
projects/d0c3e6a6800801359c13aae16854555f/: d0c3e6a6800801359c13aae16854555f_metadata.json  d0c3e6a6800801359c13aae16854555f_snapshot.json
projects/fe8c054755c074a748b634c63eabb320/: fe8c054755c074a748b634c63eabb320_metadata.json  fe8c054755c074a748b634c63eabb320_snapshot.json
projects/instagram-follower-tracker-v9-audited_c05062de/: project_info.json
projects/minute-main_cb1687fa/: project_info.json
projects/python_project_7723b181/: project_info.json
projects/src_f486bbb8/: project_info.json
scripts/: index_codebase.py  install.sh  test_e2e_full_flow.py
search/: incremental_indexer.py  indexer.py  searcher.py
tests/: README.md  run_tests.py
tmp_test_index/: id_map.db-shm  id_map.db-wal  metadata.db-shm  metadata.db-wal  stats.json
(+89 files in other folders)
